# mpl-migration-validator

./: .ammanrc.js  .gitignore  .solitarc.js  README.md  package.json
.cargo-husky/hooks/: pre-commit
.crates/: .crates2.json
.github/actions/build-program/: action.yml
.github/workflows/: program-test.yml
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  errors.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs  validator.rs
program/src/processor/: close.rs  initialize.rs  migrate.rs  misc.rs  mod.rs  start.rs  update.rs  validator.rs  validators.rs
program/src/processor/migrate/: mod.rs  processor.rs  validate.rs
program/tests/: close.rs  init_signer.rs  initialize.rs  integration.rs  migrate.rs  start.rs  update.rs
program/tests/utils/: assert.rs  asset.rs  metadata.rs  migratorr.rs  mod.rs  nft.rs  print_edition.rs  programmable.rs
