[package]
name = "mpl-migration-validator"
version = "0.3.5"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
bincode = "1.3.3"
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "~0.2"
mpl-token-metadata = { version = "1.7.0", features = ["no-entrypoint"] }
mpl-utils = "0.0.5"
serde = { version = "1.0", optional = true }
serde_with = { version = "1.14.0", optional = true }
shank = "0.0.10"
solana-program = "1.14"
spl-token = "3.5.0"
thiserror = "~1.0"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dev-dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.60"
mpl-token-auth-rules = { version = "1.0.0", features = ["no-entrypoint"] }
rmp-serde = "1.1.1"
rooster = { git = "https://github.com/metaplex-foundation/rooster", features = ["no-entrypoint"] }
solana-logger = "1.14"
solana-program-test = "1.14"
solana-sdk = "1.14"
serde = "1.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "user-hooks"]
